Project

General

Profile

Actions

Bug #20741

closed

RubyVM::InstructionSequence.compile emits a wrong warning (prism?)

Bug #20741: RubyVM::InstructionSequence.compile emits a wrong warning (prism?)

Added by mame (Yusuke Endoh) about 2 years ago. Updated about 2 years ago.

Status:
Closed
Target version:
-
[ruby-core:119194]

Description

$ ./local/bin/ruby -we 'p RubyVM::InstructionSequence.compile("42").eval'
<compiled>:1: warning: possibly useless use of a literal in void context
42
Actions

Also available in: PDF Atom