[PRISM] Assume an eval context for RubyVM::ISEQ compile

Fixes [Bug #20741]